<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/user_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/curved_edge_box_for_background"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:text="Date:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062" />

        <EditText
            android:id="@+id/cddate"
            android:layout_width="144dp"
            android:layout_height="45dp"
            android:layout_marginStart="60dp"
            android:backgroundTint="@color/white"
            android:inputType="date"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="200dp"
            android:text="Time:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062" />

        <EditText
            android:id="@+id/cdtime"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_marginStart="255dp"
            android:backgroundTint="@color/white"
            android:inputType="time"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049" />

        <TextView
            android:id="@+id/sys_pr"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="Systolic Pressure:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.224" />

        <EditText
            android:id="@+id/cdsyspr"
            android:layout_width="111dp"
            android:layout_height="48dp"
            android:layout_marginStart="188dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="304dp"
            android:layout_marginTop="10dp"
            android:text="mm Hg"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223" />

        <TextView
            android:id="@+id/dias_pr"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:text="Diastolic Pressure:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.387" />

        <EditText
            android:id="@+id/cddiaspr"
            android:layout_width="111dp"
            android:layout_height="48dp"
            android:layout_marginStart="188dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="25dp"
            android:text="mm Hg"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.387" />

        <TextView
            android:id="@+id/heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="55dp"
            android:text="Heart Rate:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <EditText
            android:id="@+id/cdheartrate"
            android:layout_width="111dp"
            android:layout_height="48dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="55dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="236dp"
            android:layout_marginTop="55dp"
            android:text=" bpm"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.552" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="115dp"
            android:text="Comment:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.713" />

        <EditText
            android:id="@+id/cdcomment"
            android:layout_width="285dp"
            android:layout_height="48dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="112dp"
            android:backgroundTint="@color/white"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.745" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_edit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#00FF38"
        android:text="Edit"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="292dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#FF0000"
        android:text="Delete"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>