<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/curved_edge_box_for_background"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:text="New Measurement :"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="448dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/curved_edge_box_for_background"
        android:backgroundTint="#0051B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:text="Date:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.058" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="323dp"
            android:layout_height="48dp"
            android:layout_marginStart="64dp"
            android:backgroundTint="@color/white"
            android:inputType="date"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:text="Time:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.216" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginStart="64dp"
            android:backgroundTint="@color/white"
            android:inputType="time"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.197" />

        <TextView
            android:id="@+id/sys_pr"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="Systolic Pressure:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.396" />

        <EditText
            android:id="@+id/edit_sys_pr"
            android:layout_width="104dp"
            android:layout_height="48dp"
            android:layout_marginStart="180dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="84dp"
            android:layout_height="32dp"
            android:layout_marginStart="292dp"
            android:layout_marginTop="2dp"
            android:text="mm Hg"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/dias_pr"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="Diastolic Pressure:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.558" />

        <EditText
            android:id="@+id/edit_dais_pr"
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:layout_marginStart="188dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.551" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="292dp"
            android:text="mm Hg"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.569" />

        <TextView
            android:id="@+id/heat_rate"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="Heart Rate:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.73" />

        <EditText
            android:id="@+id/edit_heat_rate"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_marginStart="121dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.713" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="237dp"
            android:layout_marginTop="25dp"
            android:text=" bpm"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.713" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="Comment:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.905" />

        <EditText
            android:id="@+id/edit_comment"
            android:layout_width="266dp"
            android:layout_height="48dp"
            android:layout_marginStart="114dp"
            android:layout_marginTop="55dp"
            android:backgroundTint="@color/white"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#0051B0"
        android:text="Save"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>